[package]
name = "actix-gcd"
version = "0.1.0"
authors = ["Konstantin Perikov <pericov.ko@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0.136", features = ["derive"] }
