[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Konstantin Perikov <pericov.ko@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
image = "0.24.1"
crossbeam = "0.8.1"
num_cpus = "1.13.1"
